# xethhung12_minio

./: README.md  azure-pipelines.yml  pyproject.toml
src/xethhung12_minio_download_file/: __main__.py  download_file.py
src/xethhung12_minio_upload_file/: __main__.py  upload_file.py
